# NinetyNinePoints

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
.github/workflow/: unit_test.yml
.github/workflows/: unit_test.yml
src/utils/: CMakeLists.txt  LinkedList.c  LinkedList.h  node.c  node.h
submodules/: CMakeLists.txt
tests/: CMakeLists.txt
tests/utils/: CMakeLists.txt  test_LinkedList.c  test_node.c
